--- a/shope.html
+++ b/shope.html
@@ -8,68 +8,57 @@
 <meta name="keywords" content="" />
 <meta name="robots" content="INDEX,FOLLOW" />
 <link rel="stylesheet" type="text/css" href="https://static.accesstrade.vn/coupon/v2/css/bootstrap.min.css" media="all" />
-<link rel="stylesheet" type="text/css" href="https://static.accesstrade.vn/coupon/v2/css/css-voucher_at_v2.css" media="all" />
+<link rel="stylesheet" type="text/css" href="https://static.accesstrade.vn/coupon/v2/css/css-voucher.css" media="all" />
 <link rel="stylesheet" type="text/css" href="https://static.accesstrade.vn/coupon/v2/js/slick/slick.css" media="all" />
 <link rel="stylesheet" type="text/css" href="https://static.accesstrade.vn/coupon/v2/js/slick/slick-theme.css" media="all" />
 <div id="layout-wrapper">
-    <main class="atEQPOIVFSDFSDG-voucher-main">
+    <main class="voucher-main">
         <div class="container">
-            <div class='atEQPOIVFSDFSDG-search'>
-                <div class='atEQPOIVFSDFSDG-filter-keyword'>
-                    <ul class='atEQPOIVFSDFSDG-tags'> </ul>
-                </div>
-                <div class='atEQPOIVFSDFSDG-input-main-search'>
-                    <div class='atEQPOIVFSDFSDG-input-search'>
-                        <input class="form-control" id="atEQPOIVFSDFSDG-search" placeholder="Nhập link sản phẩm, tên nhãn hàng, tên sản phẩm để tìm kiếm" type="text" value=""> <span class='atEQPOIVFSDFSDG-search-clear'> <i class="fas fa-times-circle" aria-hidden="true"></i> </span> </div>
-                    <button class='atEQPOIVFSDFSDG-btn-search'>
-                        <label class='atEQPOIVFSDFSDG-label-search'>Tìm kiếm</label> <span class='atEQPOIVFSDFSDG-icon-search'><i class="fas fa-search"></i></span> </button>
-                </div>
+            <div class="voucher-tagsearch">
+                <div class="search-form"> <span class="icon"><img src="https://static.accesstrade.vn/coupon/v2/images/icon-search.svg" alt=""></span>
+                    <input class="form-control" id="search" placeholder="Nhập liên kết sản phẩm cần tìm" type="text" value=""> </div>
+                <ul class="tags-form list-unstyled">
+                    <li>
+                        <a href="#"></a>
+                    </li>
+                </ul>
             </div>
-            <div class="atEQPOIVFSDFSDG-voucher-dealhot">
-                <div class="atEQPOIVFSDFSDG-title-filter">
-                    <div class="atEQPOIVFSDFSDG-title-total"> <img src="https://static.accesstrade.vn/coupon/v2/images/icon-coupon.svg" alt="">
-                        <div class="atEQPOIVFSDFSDG-dealhot-title">
-                            <h2 class="atEQPOIVFSDFSDG-title">Deal Hot</h2> </div>
+            <div class="voucher-mostbrand">
+                <h4 class="title">Các nhà cung cấp nổi bật</h4>
+                <div class="listbrand-item">
+                    <div class="item-brand">
+                        <a href=""> <img src="https://static.accesstrade.vn/coupon/v2/images/logo-brand/img-12.png" alt=""> <span></span> </a>
                     </div>
                 </div>
-                <div class="atEQPOIVFSDFSDG-dealitem-body"> </div>
             </div>
-            <div class='atEQPOIVFSDFSDG-voucher-dealcoupon'>
-                <div class='atEQPOIVFSDFSDG-title-tabs'>
-                    <div class='atEQPOIVFSDFSDG-title'> <span style='margin-right:8px;'> <img src="https://static.accesstrade.vn/coupon/v2/images/Vector.png"> </span>
-                        <div class="atEQPOIVFSDFSDG-dealcouponlist-title">
-                            <div class="atEQPOIVFSDFSDG-list-title">
-                                <h4>DANH SÁCH COUPON</h4>
-                                <button class='atEQPOIVFSDFSDG-delete-search' style=""> <span style='margin-right:8px;'> <img src="https://static.accesstrade.vn/coupon/v2/images/arrow-left.png"> </span> <span style='color:red; font-weight: bold;'>Hủy tìm kiếm</span> </button>
-                            </div>
-                        </div>
+            <div class="voucher-dealhot">
+                <div class="title-filter">
+                    <div class="title-total"> <img src="https://static.accesstrade.vn/coupon/v2/images/icon-coupon.svg" alt="">
+                        <h2 class="title">Deal Hot</h2> </div>
+                    <div class="dropdown filter-sort">
+                        <button class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <span>Ngày</span> <i class="icon-down"><img src="https://static.accesstrade.vn/coupon/v2/images/icon-caret.svg" alt=""></i> </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"> <a class="dropdown-item" data-date="0" href="#">Hôm nay</a> <a class="dropdown-item" data-date="1" href="#">7 ngày gần nhất</a> <a class="dropdown-item" data-date="2" href="#">30 ngày gần nhất</a> </div>
                     </div>
-                    <div class='atEQPOIVFSDFSDG-title-tabslist'>
+                </div>
+                <div class="dealitem-body"> </div>
+            </div>
+            <div class="voucher-dealcoupon">
+                <div class="title-tabs">
+                    <div class="title-total"> <img src="https://static.accesstrade.vn/coupon/v2/images/icon-promo.svg" alt="">
+                        <h2 class="title">Danh sách mã khuyến mại</h2> </div>
+                    <div class="title-tabslist">
                         <ul class="nav nav-tabs" id="tabsdeal--link" role="tablist">
-                            <li class="nav-item"> <a class="nav-link active" id="history-tabs" data-toggle="tab" href="#deal-opening" style="font-weight: bold;" role="tab">Đang mở <em></em></a> </li>
-                            <li class="nav-item"> <a class="nav-link" id="record-tabs" data-toggle="tab" href="#deal-soon" style="font-weight: bold;" role="tab">Sắp mở <em></em></a> </li>
+                            <li class="nav-item"> <a class="nav-link active" id="history-tabs" data-toggle="tab" href="#deal-opening" role="tab">Đang mở <em></em></a> </li>
+                            <li class="nav-item"> <a class="nav-link" id="record-tabs" data-toggle="tab" href="#deal-soon" role="tab">Sắp mở <em></em></a> </li>
                         </ul>
                     </div>
-                </div>
-                <div class='atEQPOIVFSDFSDG-filters-and-delete-search'>
-                    <div class="atEQPOIVFSDFSDG-at-filters">
-                        <div class="dropdown atEQPOIVFSDFSDG-filter-sort">
-                            <button class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <span>Mới nhất</span> <i class="icon-down"><img src="https://static.accesstrade.vn/coupon/v2/images/icon-caret.svg" alt=""></i> </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="dropdownMenuSort"> <a class="dropdown-item" data-sort="0" href="#" style="display: none">Mới nhất</a> <a class="dropdown-item" data-sort="4" href="#">Deal hot</a> <a class="dropdown-item" data-sort="2" href="#">Dùng nhiều</a> <a class="dropdown-item" data-sort="3" href="#">Thời gian còn lại</a> </div>
-                        </div>
-                        <div class="dropdown atEQPOIVFSDFSDG-filter-sort">
-                            <button class="dropdown-toggle" type="button" id="dropdownMenuButton2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <span>Tất cả nhà cung cấp</span> <i class="icon-down"><img src="https://static.accesstrade.vn/coupon/v2/images/icon-caret.svg" alt=""></i> </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="dropdownMenuMerchant" style=""> </div>
-                        </div>
-                    </div>
-                    <button class='atEQPOIVFSDFSDG-delete-search'> <span style='margin-right:8px;'> <img src="https://static.accesstrade.vn/coupon/v2/images/arrow-left.png"> </span> <span style='color:red; font-weight: bold;'>Hủy tìm kiếm</span> </button>
                 </div>
                 <div class="tab-content" id="tabsdeal--content">
                     <div class="tab-pane fade show active" id="deal-opening" role="tabpanel">
                         <div id="no-coupon-link" style="display: none;text-align: center;padding: 1em;">
-                            <h4>Đang cập nhật</h4> </div>
-                        <div class='atEQPOIVFSDFSDG-dealpromo-body'> </div>
-                        <div class="atEQPOIVFSDFSDG-coupon-pagination">
+                            <h4>Link sản phẩm không có mã giảm giá</h4> </div>
+                        <div class="dealpromo-body"> </div>
+                        <div class="coupon-pagination">
                             <nav>
                                 <ul class="pagination" name='pagination'>
                                     <li class="page-item" style="display: none"> <a onclick="prev(event,1)" class="page-link" href="#" tabindex="-1"><i class="fas fa-angle-double-left"></i></a> </li>
@@ -91,8 +80,8 @@
                     <div class="tab-pane fade" id="deal-soon" role="tabpanel">
                         <div id="no-coupon" style="display: none;text-align: center;padding: 1em;">
                             <h4>Đang cập nhật</h4> </div>
-                        <div class='atEQPOIVFSDFSDG-dealpromo-body'> </div>
-                        <div class="atEQPOIVFSDFSDG-coupon-pagination">
+                        <div class="dealpromo-body"> </div>
+                        <div class="coupon-pagination">
                             <nav>
                                 <ul class="pagination" name="pagination-soon">
                                     <li class="page-item" style="display: none"> <a onclick="prev(event,1,true)" class="page-link" href="#" tabindex="-1"><i class="fas fa-angle-double-left"></i></a> </li>
@@ -108,7 +97,7 @@
                                     <li class="page-item" style="display: none"> <a class="page-link" href="#" tabindex="-1"><i class="fas fa-angle-double-right"></i></a> </li>
                                 </ul>
                             </nav>
-                            <div class="page-box"> <span class="p-0" style="display: none"> <input class="page-selected" type="text"> </span> <span class="text-muted" name="text-muted-soon">Trên trang</span> </div>
+                            <div class="page-box"> <span class="p-0" style="display: none"> <input class="page-selected" type="text"></span> <span class="text-muted" name="text-muted-soon">Trên trang</span> </div>
                         </div>
                     </div>
                 </div>
@@ -120,4 +109,4 @@
 <script type="text/javascript" src="https://static.accesstrade.vn/coupon/v2/js/popper.min.js"></script>
 <script type="text/javascript" src="https://static.accesstrade.vn/coupon/v2/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="https://static.accesstrade.vn/coupon/v2/js/slick/slick.min.js"></script>
-<script type="text/javascript" id="atScript6626" data-sub1="" data-sub2="" data-sub3="" data-sub4="" data-sub5="" data-utm-source="linkmua.me" data-utm-medium="shopee" data-utm-campaign="" data-utm-content="" data-filters='{"merchant":"4742147753565840242","category":"","campaign":"4751584435713464237,"}' data-accesskey="5779665060696684686" src="https://static.accesstrade.vn/coupon/v2/js/main_at_v2.js"></script>
+<script type="text/javascript" id="atScript6626" data-sub1="" data-sub2="" data-sub3="" data-sub4="" data-sub5="" data-utm-source="linkmua.me" data-utm-medium="" data-utm-campaign="" data-utm-content="dealstore" data-filters='{"merchant":"4742147753565840242,","category":"E-COMMERCE,","campaign":"4751584435713464237,"}' data-accesskey="5779665060696684686" src="https://static.accesstrade.vn/coupon/v2/js/main.js"></script>
